# espa-autoscaling

./: .gitignore  Dockerfile  README.md  README_updated.md  adapter-deployment.yaml  build_docker.sh  deploy.sh  dhalion-deployment.yaml  flink-configuration-configmap.yaml  grafana-dashboard-auto.json  jobmanager-application.yaml  jobmanager-deployment.yaml  kafka-deployment.yaml  my_commands.md  playground.sh  port_forward_flink.sh  port_forward_grafana.sh  port_forward_kafka.sh  port_forward_prometheus.sh  port_forwards.sh  port_forwards_WSL.sh  prometheus-adapter-config.yaml  rbac_rules.yaml  redeploy.sh  taskmanager-job-deployment.yaml  undeploy.sh  values-prometheus.yaml  varga_HPA.yaml
Autoscalers/: __main__.py  deployment_hpa_varga_reactive.yaml  hpa_cpu_deployment_nonreactive.yaml  jobmanager_from_savepoint.yaml
HPA/: Configurations.py  Dockerfile  HPA.py  HPA_common_logic.py  MetricsGatherer.py  _HPA_common_logic.py  _cpu_HPA_logic.py  cpu_HPA_logic.py  gather_metrics.py  hpa_cpu.py  hpa_cpu_deployment_nonreactive.yaml  hpa_cpu_deployment_reactive.yaml  hpa_varga.py  readme.md
_my_shell_scripts/: deploy_minikube.sh  deploy_workbench.sh  gc_setup.sh  undeploy_workbench.sh
_playgound_shell_scripts/: deploy_minikube.sh  forward_ports_wsl.sh  gc_setup.sh  notes.md  run_workbench_jobs.sh
animation/: charts.html  index.html  index2.html  (+3 more)
old_Autoscalers/: Cargo.toml
old_Autoscalers/common/applications/: __init__.py
old_Autoscalers/dhalion/: Dhalion.py
old_Autoscalers/hpa/: __init__.py
old_Autoscalers/resources/tmp/ds2/data/: flink_topology.csv
(+3446 files in other folders)
